--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                 <li>add new book (with title, author, unit price, description (optional) and cover (optional))</li>
                 <li>check details of a book</li>
                 <li>edit details of a book</li>
-                <li>delete a book (can't be a part of an order and can't be in a shopping cart)</li>
-                <li>add books to shopping cart</li>
+                <li>delete a book (book can't be deleted if is a part of an order or is in the shopping cart)</li>
+                <li>add books to the shopping cart (the session lasts 30 min)</li>
                 <li>edit content of shopping cart (add and remove books)</li>
                 <li>submit the content of the shopping cart as an order</li>
-                <li>check details of an order</li>
+                <li>check order details</li>
                 <li>delete an order</li>
               </ul>
             </div>
