files styles.css script.jss and images moved to proper folders folders, added images for Pizza service, Bookstrore and CzA-www

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -15,12 +15,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
   <title>Examples of my work</title>
 
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script defer src="script.js"></script>
+  <script defer src="js/script.js"></script>
 </head>
 
 <body>
@@ -79,7 +79,13 @@
       <div class="my-works">
 
         <figure>
-          <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service (web MVC
+          <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">
+            <img src="images/pizza-200px.jpg" alt="Example web application - Pizza service">
+          </a>
+
+          <br>
+
+          <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service (Java / Spring / web MVC
             application)</a>
           <figcaption>
             (Java / Spring / Hibernate / MySQL/PostgreSQL / Thymeleaf / Bootstrap&nbsp;4&nbsp;(some elements)
@@ -93,13 +99,13 @@
 
             <div class="app-features">
               <div>
-                <h4 class="mb-2 mt-3">You need to log in:
+                <h4 class="mb-2 mt-3">You can login as:
                 </h4>
                 <ul>
-                  <li>as a client - e-mail: peter123@customer.com, pass: peter123</li>
-                  <li>as a cook - e-mail: peter123@cook.com, pass: peter123</li>
-                  <li>as an employee - e-mail: peter123@employee.com, pass: peter123</li>
-                  <li>as an admin - e-mail: peter123@admin.com, pass: peter123</li>
+                  <li>a customer - e-mail: peter123@customer.com, pass: peter123</li>
+                  <li>a cook - e-mail: peter123@cook.com, pass: peter123</li>
+                  <li>an employee - e-mail: peter123@employee.com, pass: peter123</li>
+                  <li>an admin - e-mail: peter123@admin.com, pass: peter123</li>
                   <li>you can create your account (with fake e-mail)</li>
                 </ul>
               </div>
@@ -142,7 +148,14 @@
         </figure>
 
         <figure>
-          <a href="http://www.cza.pl/" target="_blank">Website of the magazine "Czasopismo Aptekarskie" (SPA)</a>
+          <a href="http://www.cza.pl/" target="_blank">
+            <img src="images/cza-www-200px.jpg" alt="Website of 'Czasopismo Aptekarskie'">
+          </a>
+
+          <br>
+
+          <a href="http://www.cza.pl/" target="_blank">Website of the magazine "Czasopismo Aptekarskie"
+            (Angular / SPA)</a>
           <figcaption>
             (HTML / CSS / Angular 8)
             <br>Responsive / mobile first website developed with Angular 8.
@@ -150,7 +163,14 @@
         </figure>
 
         <figure>
-          <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">Bookshop (web MVC application)</a>
+          <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">
+            <img src="images/bookstore-200px.jpg" alt="Example web application - Bookstore">
+          </a>
+
+          <br>
+
+          <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">Bookstore (C# / ASP.NET / Core web MVC
+            application)</a>
           <figcaption>
             (C# / ASP.NET Core / MVC / Entity Framework Core / SQL Server / Bootstrap 4)
 
@@ -194,7 +214,7 @@
             I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red
             one is trying to sink the blue one (both ships shoot to each other with cannons). <br><br>
           </figcaption>
-          <video class="video-from-simulation" src="movie_1min.mp4" controls></video>
+          <video class="video-from-simulation" src="images/movie_1min.mp4" controls></video>
         </figure>
 
         <figure>
