--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
           <br>
 
-          <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">Bookstore (C# / ASP.NET / Core web MVC
+          <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">Bookstore (C# / ASP.NET Core / web MVC
             application)</a>
           <figcaption>
             (C# / ASP.NET Core / MVC / Entity Framework Core / SQL Server / Bootstrap 4)
