made more visible info about entering the first time the Pizza service site

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <br>
             <div class="warning-30s mt-2">
-              <em>The first start of the application may take about 30 seconds (Heroku free account requirement).</em>
+              <em>Entering this site first time may take about 30 seconds (Heroku free account requirement).</em>
             </div>
 
             <div class="app-features">
