added scaling up on hover for images that are links

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <figure>
           <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">
-            <img src="images/pizza-200px.jpg" alt="Example web application - Pizza service">
+            <img src="images/pizza-200px.jpg" class="scale-up-on-hover" alt="Example web application - Pizza service">
           </a>
 
           <br>
@@ -149,7 +149,7 @@
 
         <figure>
           <a href="http://www.cza.pl/" target="_blank">
-            <img src="images/cza-www-200px.jpg" alt="Website of 'Czasopismo Aptekarskie'">
+            <img src="images/cza-www-200px.jpg" class="scale-up-on-hover" alt="Website of 'Czasopismo Aptekarskie'">
           </a>
 
           <br>
@@ -164,7 +164,7 @@
 
         <figure>
           <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">
-            <img src="images/bookstore-200px.jpg" alt="Example web application - Bookstore">
+            <img src="images/bookstore-200px.jpg" class="scale-up-on-hover" alt="Example web application - Bookstore">
           </a>
 
           <br>
