added direct links to github repositories

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
           <br>
 
+          <a href="https://github.com/hydro17/pizza-service" class="github" target="_blank">GitHub</a>
           <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service (Java / Spring / web MVC
             application)</a>
           <figcaption>
@@ -154,6 +155,7 @@
 
           <br>
 
+          <a href="https://github.com/hydro17/www-cza" class="github" target="_blank">GitHub</a>
           <a href="http://www.cza.pl/" target="_blank">Website of the magazine "Czasopismo Aptekarskie"
             (Angular / SPA)</a>
           <figcaption>
@@ -169,6 +171,7 @@
 
           <br>
 
+          <a href="https://github.com/hydro17/book-store" class="github" target="_blank">GitHub</a>
           <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">Bookstore (C# / ASP.NET Core / web MVC
             application)</a>
           <figcaption>
@@ -218,6 +221,7 @@
         </figure>
 
         <figure>
+          <a href="https://github.com/hydro17/angular-firebase-chat" class="github" target="_blank">GitHub</a>
           <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat (HTML / CSS / Angular 8 /
             Firebase)</a>
           <figcaption>
@@ -226,6 +230,7 @@
         </figure>
 
         <figure>
+          <a href="https://github.com/hydro17/fast-typing" class="github" target="_blank">GitHub</a>
           <a href="https://hydro17.github.io/fast-typing/" target="_blank">Fast Typing (HTML / CSS / JavaScript /
             TypeScript)</a>
           <figcaption>
