--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <figure>
           <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">
-            <img src="images/pizza-200px.jpg" class="scale-up-on-hover" alt="Example web application - Pizza service">
+            <img src="images/pizza-200px.jpg" class="scale-up-on-hover" alt="Web application - Pizza service">
           </a>
 
           <br>
@@ -166,7 +166,7 @@
 
         <figure>
           <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">
-            <img src="images/bookstore-200px.jpg" class="scale-up-on-hover" alt="Example web application - Bookstore">
+            <img src="images/bookstore-200px.jpg" class="scale-up-on-hover" alt="Web application - Bookstore">
           </a>
 
           <br>
@@ -212,7 +212,7 @@
         </figure> -->
 
         <figure>
-          <div><span class="highlighted">Example of using C#</span> - A short video from a simulation in Unity 3D</div>
+          <div>Example of using C# - A short video from a simulation in Unity 3D</div>
           <figcaption>
             I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red
             one is trying to sink the blue one (both ships shoot to each other with cannons). <br><br>
