changed landing page - from 'home' to 'works' and updates

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="container nav-style main-margin-top">
 
     <!-- START HOME ------------------------------>
-    <section id="home">
+    <section id="home" style="display: none">
 
       <div class="my-header3">
         My name is Andrzej.
@@ -45,15 +45,14 @@
       <div>
         <p class="mb-2">My skills:</p>
 
-        Object oriented programming.
-        <br>C# / ASP.NET Core / MVC / Razor Pages / Entity Framework Core
+        C# / ASP.NET Core / MVC / Razor Pages / Entity Framework Core
         <br>Java / Spring / Hibernate
-        <br>JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
+        <br>JavaScript (ES6+) / TypeScript / Angular 2+ / jQuery, HTML, CSS, RWD.
         <br>Version control system GIT + <a href="https://github.com/hydro17/">gitHub</a>.
-        <br>Knowledge of relational databases, ERD, SQL.
+        <br>SQL, relational databases.
+        <br>SOLID, Clean Code, REST.
         <br>Basic knowledge of Unity 3D (scripts in C#).
-        <br>Basic knowlegde of UML.
-        <br>Knowledge of SOLID, Clean Code, REST.
+        <br>Basic knowlegde of UML, ERD.
         <br>The ability to think analytically.
       </div>
 
@@ -64,7 +63,7 @@
     <!-- {style="display: none"} <- This is just the initial setting for sections at the beginning that should be hidden -->
     <!-- Later this inline style {style="display: none"} is controlled by jQuery functions: fadeOut(), fadeIn() -->
     <!-- Functions fadeOut() and fadeIn() at the end of the animation leave display: none or display: block respectively -->
-    <section id="works" style="display: none">
+    <section id="works">
 
       <div class="my-header3 mt-3">
         Here are links to my <a href="https://github.com/hydro17">GitHub</a> and some of my works.
@@ -95,7 +94,7 @@
 
             <br>
             <div class="warning-30s mt-2">
-              <em>Entering this site first time may take about 30 seconds (Heroku free account requirement).</em>
+              <em>Entering this site first time may take about 30-45 seconds (Heroku free account requirement).</em>
             </div>
 
             <div class="app-features">
@@ -176,6 +175,11 @@
             application)</a>
           <figcaption>
             (C# / ASP.NET Core / MVC / Entity Framework Core / SQL Server / Bootstrap 4)
+
+            <br>
+            <div class="warning-30s mt-2">
+              <em>Entering this site first time may take about 30-45 seconds.</em>
+            </div>
 
             <div class="app-features">
               <h4 class="mb-2 mt-2">Application allows to: </h4>
