fixed active menu button

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body>
   <nav>
     <ul class="container menu">
-      <li id="menu-btn-home" class="menu-btn-regular menu-btn-selected">Home</li>
-      <li id="menu-btn-works" class="menu-btn-regular">Works</li>
+      <li id="menu-btn-home" class="menu-btn-regular">Home</li>
+      <li id="menu-btn-works" class="menu-btn-regular menu-btn-selected">Works</li>
       <li id="menu-btn-contact" class="menu-btn-regular">Contact</li>
     </ul>
   </nav>
