updates: 'Angular 2+' -> 'Angular' and added 'wind-powered'

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         C# / ASP.NET Core / MVC / Razor Pages / Entity Framework Core
         <br>Java / Spring / Hibernate
-        <br>JavaScript (ES6+) / TypeScript / Angular 2+ / jQuery, HTML, CSS, RWD.
+        <br>JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS, RWD.
         <br>Version control system GIT + <a href="https://github.com/hydro17/">gitHub</a>.
         <br>SQL, relational databases.
         <br>SOLID, Clean Code, REST.
@@ -218,7 +218,8 @@
         <figure>
           <div>Example of using C# - A short video from a simulation in Unity 3D</div>
           <figcaption>
-            I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red
+            I have created scripts (in C#) responsible for the wind-powered ships behavior. The blue ship moves randomly
+            and the red
             one is trying to sink the blue one (both ships shoot to each other with cannons). <br><br>
           </figcaption>
           <video class="video-from-simulation" src="images/movie_1min.mp4" controls></video>
