--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
         </figure>
 
         <figure>
-          <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">
+          <a href="http://hydro17.hostingasp.pl/" target="_blank">
             <img src="images/bookstore-200px.jpg" class="scale-up-on-hover" alt="Web application - Bookstore">
           </a>
 
           <br>
 
           <a href="https://github.com/hydro17/book-store" class="github" target="_blank">GitHub</a>
-          <a href="http://hydro17-001-site1.htempurl.com/" target="_blank">Bookstore (C# / ASP.NET Core / web MVC
+          <a href="http://hydro17.hostingasp.pl/" target="_blank">Bookstore (C# / ASP.NET Core / web MVC
             application)</a>
           <figcaption>
             (C# / ASP.NET Core / MVC / Entity Framework Core / SQL Server / Bootstrap 4)
