add RESTful web service 'Space Agency Data Hub'

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
       <div>
         <p class="mb-2">My skills:</p>
-
-        C# / ASP.NET Core / MVC / Razor Pages / Entity Framework Core
-        <br>Java / Spring / Hibernate
+        Java / Spring / Hibernate
+        <br>Unit tests / Integration tests / JUnit 5
+        <br>C# / ASP.NET Core / MVC / Razor Pages / Entity Framework Core
         <br>JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS, RWD.
         <br>Version control system GIT + <a href="https://github.com/hydro17/">gitHub</a>.
         <br>SQL, relational databases.
@@ -85,7 +85,7 @@
           <br>
 
           <a href="https://github.com/hydro17/pizza-service" class="github" target="_blank">GitHub</a>
-          <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service (Java / Spring / web MVC
+          <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service (web MVC
             application)</a>
           <figcaption>
             (Java / Spring / Hibernate / MySQL/PostgreSQL / Thymeleaf / Bootstrap&nbsp;4&nbsp;(some elements)
@@ -147,6 +147,28 @@
           </figcaption>
         </figure>
 
+        <hr style="width: 75%;">
+
+        <!-- RESTful webs service "Space Agency Data Hub" -->
+        <figure>
+          <a href="https://github.com/hydro17/space-agency-data-hub" class="github" target="_blank">GitHub</a>
+          Space Agency Data Hub (RESTful web service)
+          <figcaption>
+            (Java / Spring / Hibernate / H2 / JUnit 5 / Unit tests / Integration tests)
+            <div class="app-features mt-2">
+              <ul>
+                <li><a href="docs/java-task.pdf" target="_blank">Projetc specification</a></li>
+                <li>Implementacion - see <a href="https://github.com/hydro17/space-agency-data-hub"
+                    target="_blank">github repository</a></li>
+                <li><a href="docs/implementation-info.pdf" target="_blank">Implementation info</a></li>
+              </ul>
+            </div>
+          </figcaption>
+        </figure>
+
+        <hr style="width: 75%;">
+
+        <!-- Website of the monthly "Czasopismo Aptekarskie" -->
         <figure>
           <a href="http://www.cza.pl/" target="_blank">
             <img src="images/cza-www-200px.jpg" class="scale-up-on-hover" alt="Website of 'Czasopismo Aptekarskie'">
@@ -155,14 +177,14 @@
           <br>
 
           <a href="https://github.com/hydro17/www-cza" class="github" target="_blank">GitHub</a>
-          <a href="http://www.cza.pl/" target="_blank">Website of the magazine "Czasopismo Aptekarskie"
-            (Angular / SPA)</a>
+          <a href="http://www.cza.pl/" target="_blank">Website of the magazine "Czasopismo Aptekarskie"</a>
           <figcaption>
-            (HTML / CSS / Angular 8)
+            (HTML / CSS / Angular 8 / SPA)
             <br>Responsive / mobile first website developed with Angular 8.
           </figcaption>
         </figure>
 
+        <!-- Bookstore web application -->
         <figure>
           <a href="http://hydro17.hostingasp.pl/" target="_blank">
             <img src="images/bookstore-200px.jpg" class="scale-up-on-hover" alt="Web application - Bookstore">
@@ -171,8 +193,7 @@
           <br>
 
           <a href="https://github.com/hydro17/book-store" class="github" target="_blank">GitHub</a>
-          <a href="http://hydro17.hostingasp.pl/" target="_blank">Bookstore (C# / ASP.NET Core / web MVC
-            application)</a>
+          <a href="http://hydro17.hostingasp.pl/" target="_blank">Bookstore (web MVC application)</a>
           <figcaption>
             (C# / ASP.NET Core / MVC / Entity Framework Core / SQL Server / Bootstrap 4)
 
@@ -199,22 +220,7 @@
           </figcaption>
         </figure>
 
-        <!-- <figure>
-          <a href="http://ebookcase-core-mvc.gear.host/" target="_blank">eBookcase / MVC</a>
-          <figcaption>
-            (C# / ASP.NET Core MVC / Entity Framework / SQL Server / Bootstrap 4)
-            <br>Simple application (developed using MVC) performing CRUD operations.
-          </figcaption>
-        </figure>
-
-        <figure>
-          <a href="http://ebookcase-core-rp.gear.host/BookList" target="_blank">eBookcase / Razor Pages</a>
-          <figcaption>
-            (C# / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Bootstrap 4)
-            <br>Simple application (the same as above) (developed using Razor Pages) performing CRUD operations.
-          </figcaption>
-        </figure> -->
-
+        <!-- Example of using C# - A short video from a simulation in Unity 3 -->
         <figure>
           <div>Example of using C# - A short video from a simulation in Unity 3D</div>
           <figcaption>
@@ -225,6 +231,7 @@
           <video class="video-from-simulation" src="images/movie_1min.mp4" controls></video>
         </figure>
 
+        <!-- Simple chat -->
         <figure>
           <a href="https://github.com/hydro17/angular-firebase-chat" class="github" target="_blank">GitHub</a>
           <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat (HTML / CSS / Angular 8 /
@@ -234,6 +241,7 @@
           </figcaption>
         </figure>
 
+        <!-- Fast Typing -->
         <figure>
           <a href="https://github.com/hydro17/fast-typing" class="github" target="_blank">GitHub</a>
           <a href="https://hydro17.github.io/fast-typing/" target="_blank">Fast Typing (HTML / CSS / JavaScript /
